# grpc-hash-service

./: Dockerfile  README.md  client.py  config.py  entrypoint.sh  grpc  hash.proto  hash_pb2.py  hash_pb2_grpc.py  pyproject.toml  server.py
certs/: chimeratool-com.pem  fe-server.crt  pepe2-chimeratool-com.pem  server.key
